Fixed stripe related issue in tournament entry wizard.  Changes spacing of controls on profile screen.

--- a/client/src/app/profile/profile-edit/profile-edit.component.scss
+++ b/client/src/app/profile/profile-edit/profile-edit.component.scss
@@ -13,9 +13,9 @@ mat-card-title {
 }
 
 .gender-radio-sm {
-  padding: 15px 15px 0 15px;
+  padding: 0 15px;
 }
 
 .gender-radio {
-  padding: 30px 0 0 20px;
+  padding: 10px 0 0 15px;
 }
